--- a/css/style.scss
+++ b/css/style.scss
@@ -18,10 +18,10 @@ body {
   font-weight: 400;
 
   @media only screen and (min-width: 769px) {
-    //background: url(../images/bg.jpg);
+    background: url(../images/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-  } 
+  }
 }
 
 a {
@@ -70,7 +70,7 @@ h3 {
   .lgnd-inv {
     color: #ff8000
   }
-  
+
   &:after {
     position: absolute;
     top: -20px;
@@ -94,7 +94,7 @@ h3 {
   p{
     padding-left: 0px;
     font-size: 11px;
-    opacity: 0.3;
+    opacity: 0.5;
   }
 }
 
@@ -125,7 +125,7 @@ h3 {
     margin-top: 50px;
     margin-bottom: 50px;
   }
-  
+
   @media only screen and (min-width: 1400px) {
     min-height: 480px
   }
@@ -133,7 +133,7 @@ h3 {
 
 .wrapper {
   width: 100%;
-  
+
   @media only screen and (min-width: 769px) {
     max-width: 1250px;
     margin: 0px auto;
@@ -193,7 +193,7 @@ h3 {
   margin: 20px auto;
   font-size: 16px;
   padding: 8px 10px;
-  
+
   @media only screen and (max-width: 768px) {
     font-size: 11px;
   }
@@ -361,7 +361,7 @@ nav {
   @media only screen and (min-width: 769px) {
     padding-top: 55px;
   }
-  
+
   @media only screen and (min-width: 1400px) {
     padding-top: 90px;
   }
@@ -418,12 +418,12 @@ nav {
       text-align: center;
       max-width: 23%;
       font-size: 13px;
-      
+
       span {
         padding: 30px 0;
       }
     }
-    
+
     @media only screen and (min-width: 1400px) {
       padding: 185px 0px 185px 0px;
     }
