--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,12 @@ body {
   font-family: $font-stack;
   font-size: 14px;
   font-weight: 400;
+  @media only screen and (min-width: 769px) {
+    background-image: url(../images/bg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
 }
 
 a {
@@ -113,7 +119,7 @@ h3 {
   }
 }
 .content {
-  //background: white;
+  background: #efefef;
   margin: 30px 0px;
   padding: 0px 25px 25px;
   border-radius: 3px;
