--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,14 @@ h3 {
   }
 }
 
+.sponsored {
+  margin-top: 15px;
+  img {
+    max-width: 100%;
+    border-radius: 3px;
+  }
+}
+
 /*--------------------- CONTAINERS ---------------------*/
 
 #itemlog.in-use {
@@ -270,6 +278,13 @@ nav {
     &:hover{
       color: darken($yellow, 20%);
     }
+  }
+}
+
+.mobile {
+  display: none;
+  @media only screen and (max-width: 768px) {
+    display: block;
   }
 }
 
