--- a/css/style.scss
+++ b/css/style.scss
@@ -137,8 +137,7 @@ h3 {
 }
 
 .item-section {
-  min-height: 300px;
-  margin-top: 20px;
+  min-height: 450px;
 
   @media only screen and (min-width: 769px) {
     min-height: 360px;
@@ -171,10 +170,10 @@ h3 {
   margin: 0px auto;
   .btn {
     float: left;
-    margin: 0px 20px 5px 0px;
+    margin: 0px 20px 0px 0px;
     &:last-child {
       float: right;
-      margin: 0px 0px 5px 20px;
+      margin: 0px 0px 0px 20px;
     }
   }
 }
@@ -193,12 +192,6 @@ h3 {
   input {
     width: 90%;
     padding: 10px 0;
-  }
-}
-
-.grid--full > .grid__item.mobile-wrap {
-  @media only screen and (max-width: 768px) {
-    padding: 0px 5px;
   }
 }
 
@@ -389,6 +382,7 @@ nav {
   margin-right: auto;
   width: 100%;
   max-width: 500px;
+  padding-top: 105px;
   @media only screen and (min-width: 769px) {
     padding-top: 55px;
   }
@@ -437,25 +431,17 @@ nav {
 
   li {
     float: left;
-    font-size: 12px;
-    width: 100%;
-    padding: 20px 10px;
-    margin: 3px 0px;
-
-    @media only screen and (min-width: 769px) {
-      padding: 125px 0px 125px 0px;
-      margin: 1%;
-      text-align: center;
-      max-width: 23%;
-      font-size: 13px;
-      border-radius: 7px;
-
-      span {
-        padding: 30px 0;
-      }
+    padding: 163px 0px 163px 0px;
+    margin:  0.5%;
+    text-align: center;
+    max-width: 24%;
+    border-radius: 7px;
+    font-size: 13px;
+    span {
+      padding: 30px 0;
     }
 
-    @media only screen and (min-width: 1400px) {
+    @media only screen and (min-width: 769px) {
       padding: 185px 0px 185px 0px;
     }
   }
@@ -487,11 +473,9 @@ nav {
   //border: 1px solid #bbb;
   background-color: white;
   box-sizing: border-box;
-  @media only screen and (min-width: 769px) {
-    span {
-      display: block;
-      background-color: rgba(255,255,255,0.8);
-    }
+  span {
+    display: block;
+    background-color: rgba(255,255,255,0.8);
   }
 }
 .rare {
@@ -500,11 +484,9 @@ nav {
   background-color: #0070ff;
   //border: 1px solid #0070ff;
   box-sizing: border-box;
-  @media only screen and (min-width: 769px) {
-    span {
-      display: block;
-      background-color: rgba(0,112,255,0.8);
-    }
+  span {
+    display: block;
+    background-color: rgba(0,112,255,0.8);
   }
 }
 .epic {
@@ -513,11 +495,9 @@ nav {
   //border: 1px solid #B048F8;
   background-color: #B048F8;
   box-sizing: border-box;
-  @media only screen and (min-width: 769px) {
-    span {
-      display: block;
-      background-color: rgba(176,72,248,0.8);
-    }
+  span {
+    display: block;
+    background-color: rgba(176,72,248,0.8);
   }
 }
 .legendary {
@@ -526,275 +506,166 @@ nav {
   //border: 1px solid #ff8000;
   background-color: #ff8000;
   box-sizing: border-box;
-  @media only screen and (min-width: 769px) {
-    span {
-      display: block;
-      background-color: rgba(255,128,0,0.8);
-    }
+  span {
+    display: block;
+    background-color: rgba(255,128,0,0.8);
   }
 }
 
 /*--------------------- HEROES ---------------------*/
 
 .generic {
-  background-image: url(../images/mobile/generic.png);;
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/overwatch-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/overwatch-full.jpg);
  }
 
 .orisa {
-  background-image: url(../images/mobile/orisa.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/orisa-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/orisa-full.jpg);
 }
 
  .sombra {
-  background-image: url(../images/mobile/sombra.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/sombra-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/sombra-full.jpg);
 }
 
 .ana {
-  background-image: url(../images/mobile/ana.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/ana-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/ana-full.jpg);
 }
 
 .bastion {
-  background-image: url(../images/mobile/bastion.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/bastion-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/bastion-full.jpg);
 }
 .dva {
-  background-image: url(../images/mobile/dva.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/dva-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/dva-full.jpg);
 }
 .genji {
-  background-image: url(../images/mobile/genji.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/genji-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/genji-full.jpg);
 }
 .hanzo {
-  background-image: url(../images/mobile/hanzo.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/hanzo-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/hanzo-full.jpg);
 }
 .junkrat {
-  background-image: url(../images/mobile/junkrat.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/junkrat-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/junkrat-full.jpg);
 }
 .lucio {
-  background-image: url(../images/mobile/lucio.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/lucio-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/lucio-full.jpg);
 }
-
 .mccree {
-  background-image: url(../images/mobile/mccree.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/mccree-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/mccree-full.jpg);
 }
 
 .mei {
-  background-image: url(../images/mobile/mei.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/mei-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/mei-full.jpg);
 }
 .mercy {
-  background-image: url(../images/mobile/mercy.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/mercy-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/mercy-full.jpg);
 }
 .pharah {
-  background-image: url(../images/mobile/pharah.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/pharah-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/pharah-full.jpg);
 }
 .reaper {
-  background-image: url(../images/mobile/reaper.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/reaper-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/reaper-full.jpg);
 }
 .reinhardt {
-  background-image: url(../images/mobile/reinhardt.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/reinhardt-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/reinhardt-full.jpg);
 }
 .roadhog {
-  background-image: url(../images/mobile/roadhog.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/roadhog-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/roadhog-full.jpg);
 }
 .soldier {
-  background-image: url(../images/mobile/soldier.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/soldier-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/soldier-full.jpg);
 }
 .symmetra {
-  background-image: url(../images/mobile/symmetra.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/symmetra-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/symmetra-full.jpg);
 }
 .torbjorn {
-  background-image: url(../images/mobile/torbjorn.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/torbjorn-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/torbjorn-full.jpg);
 }
 .tracer {
-  background-image: url(../images/mobile/tracer.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/tracer-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/tracer-full.jpg);
 }
 .widowmaker {
-  background-image: url(../images/mobile/widowmaker.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/widowmaker-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/widowmaker-full.jpg);
 }
 .winston {
-  background-image: url(../images/mobile/winston.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/winston-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/winston-full.jpg);
 }
 .zarya {
-  background-image: url(../images/mobile/zarya.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/zarya-full.jpg);
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/zarya-full.jpg);
 }
 .zenyatta {
-  background-image: url(../images/mobile/zenyatta.png);
   background-repeat: no-repeat;
-  background-position: right;
-  @media only screen and (min-width: 769px) {
-    background-size: cover;
-    background-position: center;
-    background-image: url(../images/zenyatta-full.jpg);
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .generic, .bastion, .dva, .genji, .hanzo, .junkrat, .lucio, .mccree, .mei, .mercy, .pharah, .reaper, .reinhardt, .roadhog, .soldier, .symmetra, .torbjorn, .tracer, .widowmaker, .winston, .zarya, .zenyatta {
-    background-size: 30%;
-  }
+  background-size: cover;
+  background-position: center;
+  background-image: url(../images/zenyatta-full.jpg);
 }
