--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -448,13 +448,14 @@ nav {
     text-align: center;
     max-width: 24%;
     border-radius: 7px;
-    font-size: 13px;
+    font-size: 11px;
     span {
       padding: 30px 0;
     }
 
     @media only screen and (min-width: 769px) {
       padding: 185px 0px 185px 0px;
+      font-size: 13px;
     }
   }
 }
@@ -524,9 +525,13 @@ nav {
   }
 }
 
+.slick-slide span{
+  display: block;
+}
+
 /*--------------------- HEROES ---------------------*/
 
-.generic {
+.generic, .slick-slide {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
